[metadata]
name = stat-alerts 
version = 0.0.1
description = A package that provide statisitical limits from time series data
url = https://github.com/omkamal/spc
author = Omar Kamal Hosney 
author_email = "Omar Kamal Hosney" <omar.wasat@gmail.com>
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

